feat: add new response for validation endpoint
