# src/model/ValidationResponseDto.ts
@@ -1,0 +1,7 @@
+import { RapLPCustomSpectralDiagnostic } from "../util/RapLPCustomSpectralDiagnostic";
+import { DiagnosticReport } from "../util/RapLPDiagnostic";
+
+export interface ValidationResponseDto {
+  result: RapLPCustomSpectralDiagnostic[];
+  report: DiagnosticReport[];
+}
